{"name":"dune","vers":"0.1.0","deps":[{"name":"dirs","req":"^2.0","features":[],"optional":false,"default_features":true,"target":null,"kind":"normal"},{"name":"honeycomb","req":"^0.1.4","features":[],"optional":false,"default_features":true,"target":null,"kind":"normal"},{"name":"read_input","req":"^0.8","features":[],"optional":false,"default_features":true,"target":null,"kind":"normal"},{"name":"xmachine","req":"^0.1.11","features":[],"optional":false,"default_features":true,"target":null,"kind":"normal"}],"cksum":"2798b69a2a43cbabea998af92ad1bf5712047c118d09a95aef0189acd869a229","features":{},"yanked":false,"links":null}
